Fixing header padding on mobile

--- a/src/style/commons/_navbar.scss
+++ b/src/style/commons/_navbar.scss
@@ -235,7 +235,7 @@ $sans-serif: "sans-serif";
 }
 @media screen and(max-width: 515px) {
     .mdl-layout__header-row {
-        padding-left: 16px;
+        padding: 0;
     }
     .mdl-layout-title {
         display: none;
